fixed overflow on lap results at stopwatch timer

--- a/countdown/assets/style.css
+++ b/countdown/assets/style.css
@@ -122,9 +122,12 @@ input#datePicker {
   display: none;
 }
 .realTimer-laps {
-  height: 100%;
+  /* height: 100%; */
   width: 200px;
   border-radius: 1rem;
+  height: 300px;
+  overflow-y: auto;
+  overflow-x: none;
 }
 .realTimer-laps li {
 list-style-type: none;
@@ -179,6 +182,9 @@ font-size: .75rem;
   }
   .realTimer-laps {
     width: auto;
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: none;
   }
   .realTimer-laps ul {
     padding-inline-start: 1rem;
